--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <!-- Don't forget to link your CSS file! -->
+    <style>
+      
+    </style>
+    <link type="stylesheet" src="style.css">
   </head>
   <body>
     <header>
