--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
       
     </style>
-    <link rel="stylesheet" src="style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
